# building-a-fair-recommendation-system

./: LICENCE  README.md  azure-pipelines.yml  mypy.ini  pyproject.toml
banditmf/: helpers.py  main.py
banditmf/Baselines/: base_baseline.py  popularity_based_recommender.py  random_recommender.py
banditmf/Components/: bandit_mf.py  casino.py  clusterer.py  history_aware_mab.py  mfu.py
banditmf/Components/CandidateSelectors/: base_candidate_selector.py  testset_candidate_selector.py  unrestricted_candidate_selector.py
banditmf/Components/Rankers/: base_ranker.py  default_ranker.py  fair_ranker.py
banditmf/Components/Rewarders/: base_rewarder.py  production_rewarder.py  testset_rewarder.py
banditmf/DataLoaders/: cross_validation_generator.py  data_loader.py
banditmf/Environments/: base_simulation.py  batch_simulation.py  environment.py  prequential_simulation.py
banditmf/Evaluators/: base_evaluator.py  baseline_evaluator.py  batch_simulation_evaluator.py  cold_user_threshold_evaluator.py  mab_history_evaluator.py  mf_vs_casino_evaluator.py  prequential_simulation_evaluator.py
banditmf/Evaluators/Fairness/: base_fairness_evaluator.py  fairness_evaluator.py  fairness_of_popularity_based_evaluator.py  fairness_vs_effectiveness_evaluator.py
banditmf/Evaluators/HyperparameterSearch/: base_hyperparameter_search.py  hyperparameter_search_type_a.py  hyperparameter_search_type_b.py
banditmf/Interfaces/: algorithm.py  predictor.py  rewardable.py
scripts/: long_tail.py
