[tool.poetry]
name = "building-a-fair-recommendation-system"
version = "0.1.0"
description = "A fair recommendation system using matrix factorisation and the multi armed bandit approach"
authors = ["Aucke Bos <aucke.bos@infosupport.com>"]

[tool.poetry.dependencies]
python = "^3.8"
lenskit = "^0.13.1"
sklearn = "^0.0"
mabwiser = "^1.12.0"
beautifultable = "^1.0.1"
mypy = "^0.910"
isort = "^5.9.3"
mlflow = "^1.21.0"
scikit-optimize = "^0.9.0"
structlog = "^21.4.0"
IMDbPY = "^2021.4.18"
tqdm = "^4.62.3"
black = "^21.11b1"
pandas = "^1.3.5"
numpy = "^1.22.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
